--- a/app/src/main/res/xml/newsi.xml
+++ b/app/src/main/res/xml/newsi.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" standalone="yes"?>
 <be-app name="Newsi" apk="com.firexweb.newsi" version="1" remote="true"> <!-- ( remote = true ) because of development -->
-  <server domain="www.palsawa.com" uri="bebound" Auth="1234" https="false"/>
+  <server domain="www.firexweb.com" uri="bebound/" Auth="1234" https="false"/>
 
   <!-- Errors -->
   <errors>
