Fixing white notification bar issue Fixing Settings Activity Changing back icon Changing logo and placeholder icons

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -31,7 +31,7 @@
                 android:layout_height="24dp"
                 android:layout_gravity="center_vertical"
                 android:onClick="finishActivity"
-                android:src="@drawable/ic_undo_white_24dp" />
+                android:src="@drawable/back" />
         </LinearLayout>
 
         <LinearLayout
