--- a/app/src/main/res/layout-v17/activity_settings.xml
+++ b/app/src/main/res/layout-v17/activity_settings.xml
@@ -53,7 +53,7 @@
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_gravity="center_vertical"
-                    android:src="@drawable/ic_undo_white_24dp" />
+                    android:src="@drawable/back" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
