--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -17,7 +17,7 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_gravity="center"
-            android:src="@drawable/site_logo3" />
+            android:src="@drawable/site_logo" />
 
         <TextView
             android:layout_width="wrap_content"
