--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -71,7 +71,7 @@
                         android:layout_height="24dp"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
-                        android:src="@drawable/ic_undo_white_24dp" />
+                        android:src="@drawable/back" />
                 </LinearLayout>
 
             </LinearLayout>
